Implementação de cadastros
Definição e implementação de cadastro base [Tipo]
- Integração com Material Design Lite;
- Implementação de provedores de dados [Auth, TipoAgenda];
- Implementação  de diretivas [AutoFocus, Modal, CadastroTipo, Toast];
- Implementação de cadastro tipo de agenda;
- Implementação de modelos [Tipo, TipoAgenda];
- Refatoracão de código e correção de bugs.

--- a/desenvolvimento/dashboard/src/index.html
+++ b/desenvolvimento/dashboard/src/index.html
@@ -14,12 +14,17 @@
   <script src="assets/app.css"></script>
 
   <!--Google Material Design Lite & Icons-->
+  <script src="assets/material.min.js"></script>
+  <link rel="stylesheet" href="assets/material.min.css">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   
 </head>
 <body bgcolor="#EBEBEB">
     
-    <app-root>Loading...</app-root>
+    <app-root>
+      <!-- MDL Progress Bar with Indeterminate Progress -->
+      <div class="mdl-progress mdl-js-progress mdl-progress__indeterminate" style="width:100%;"></div>
+    </app-root>
   
     {{#each scripts.polyfills}}
     <script src="{{.}}"></script>
