--- a/desenvolvimento/dashboard/src/index.html
+++ b/desenvolvimento/dashboard/src/index.html
@@ -14,9 +14,9 @@
   <script src="assets/app.css"></script>
 
   <!--Google Material Design Lite & Icons-->
-  <script src="assets/material.min.js"></script>
-  <link rel="stylesheet" href="assets/material.min.css">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <link rel="stylesheet" href="https://code.getmdl.io/1.1.3/material.teal-purple.min.css">
+  <script defer src="https://code.getmdl.io/1.1.3/material.min.js"></script>
   
 </head>
 <body bgcolor="#EBEBEB">
