--- a/desenvolvimento/hibrido/www/index.html
+++ b/desenvolvimento/hibrido/www/index.html
@@ -14,11 +14,18 @@
   <link ios-href="build/css/app.ios.css" rel="stylesheet">
   <link md-href="build/css/app.md.css" rel="stylesheet">
   <link wp-href="build/css/app.wp.css" rel="stylesheet">
+  
+  <link rel="stylesheet" href="https://code.getmdl.io/1.2.0/material.indigo-pink.min.css">
+  <script defer src="https://code.getmdl.io/1.2.0/material.min.js"></script>
+
 </head>
 
 <body>
   <!-- <ion-app> is where the app's HTML loads -->
-  <ion-app>Carregando...</ion-app>
+  <ion-app>
+      <!-- MDL Spinner Component -->
+      <div class="mdl-spinner mdl-js-spinner is-active"></div>
+  </ion-app>
 
   <!-- cordova.js required for cordova apps -->
   <script src="cordova.js"></script>
