--- a/desenvolvimento/hibrido/www/index.html
+++ b/desenvolvimento/hibrido/www/index.html
@@ -28,8 +28,9 @@
       <div class="mdl-spinner mdl-js-spinner is-active" style="margin:45% 45% auto;"></div>
   </ion-app>
 
+  <script src="https://maps.googleapis.com/maps/api/js?libraries=places&key=AIzaSyD3CHT1Y8wufZ_o3Q6yxDKwe2mysMOtdg4&v=3"></script>
   <!-- cordova.js required for cordova apps -->
-  <script src="cordova.js"></script>
+  <!--<script src="cordova.js"></script>-->
   <!-- Polyfill needed for platforms without Promise and Collection support -->
   <script src="build/js/es6-shim.min.js"></script>
   <!-- Zone.js and Reflect-metadata -->
@@ -41,7 +42,6 @@
   <!-- google maps script is loaded last as to not block rendering: AIzaSyD3CHT1Y8wufZ_o3Q6yxDKwe2mysMOtdg4 -->
   <!--<script src="http://maps.googleapis.com/maps/api/js?key=AIzaSyD3CHT1Y8wufZ_o3Q6yxDKwe2mysMOtdg4&v=3&libraries=places" async defer></script>-->
   <!--<script src="http://maps.googleapis.com/maps/api/js?sensor=false&key=AIzaSyD3CHT1Y8wufZ_o3Q6yxDKwe2mysMOtdg4&v=3" async defer></script>-->
-  <script src="https://maps.googleapis.com/maps/api/js?libraries=places&key=AIzaSyD3CHT1Y8wufZ_o3Q6yxDKwe2mysMOtdg4&v=3" async defer></script>
 </body>
 
 </html>
