--- a/desenvolvimento/hibrido/www/index.html
+++ b/desenvolvimento/hibrido/www/index.html
@@ -30,7 +30,7 @@
 
   <script src="https://maps.googleapis.com/maps/api/js?libraries=places&key=AIzaSyD3CHT1Y8wufZ_o3Q6yxDKwe2mysMOtdg4&v=3"></script>
   <!-- cordova.js required for cordova apps -->
-  <!--<script src="cordova.js"></script>-->
+  <script src="cordova.js"></script>
   <!-- Polyfill needed for platforms without Promise and Collection support -->
   <script src="build/js/es6-shim.min.js"></script>
   <!-- Zone.js and Reflect-metadata -->
