--- a/desenvolvimento/hibrido/www/index.html
+++ b/desenvolvimento/hibrido/www/index.html
@@ -19,6 +19,26 @@
   <link rel="stylesheet" href="https://code.getmdl.io/1.2.0/material.indigo-pink.min.css">
   <script defer src="https://code.getmdl.io/1.2.0/material.min.js"></script>
 
+  <link rel="apple-touch-icon" href="/custom_icon.png">
+  <meta name="apple-mobile-web-app-capable" content="yes">
+
+  <!--manifest.json-->
+  <link rel="manifest" href="manifest.json">
+
+  <!--theme color-->
+  <meta name="theme-color" content="#3f51b5">
+  
+  <script>
+    if ('serviceWorker' in navigator) {
+      navigator.serviceWorker.register('sw.js').then((registration) => {
+          // Registration was successful
+          console.log('ServiceWorker registration successful with scope: ', registration.scope);
+      }).catch((err) => {
+          // registration failed :(
+          console.log('ServiceWorker registration failed: ', err);
+      });
+    }
+  </script>
 </head>
 
 <body>
