Atualização de Documentação
Introdução
Resumo

--- a/documentacao/documentoweb2015/02-resumo/index.html
+++ b/documentacao/documentoweb2015/02-resumo/index.html
@@ -45,9 +45,13 @@
 			  <!-- List group -->
 			  <ul class="list-group">
 				<li class="list-group-item">
-					Em um breve resumo este documento visa exclarecer o problema que o software resolve  dentre a gestão de turismo assim como abordagem das funcionalidades que é oferecido ao usuário.	
-					<br>
-					<a href="C:\Users\Edu\Documents\GitHub\latosensu-ufscar\app\documentacao\documentoweb2015\01-introducao">Resumo</a>		    	
+				<h1> Resumo </h1>
+				<br>
+				<p style="justify-content: all;">
+					 Atualmente o turismo vem sendo bastante explorado desde a realização de  passeios, eventos ou deslocamento a trabalho  e é predominante obter uma organização  de tarefas a serem  feitas para sua concretização . Os aplicativos mobile transforma o modo de como usuários utilizam e adquirem os recursos da Tecnologia da Informação. É  muito comum vermos as pessoas utilizarem dispositivos móveis no dia-a-dia por trazer praticidades em suas tarefas diárias. Com base nessa tecnologia e intuito de facilitar os usuários destes recursos que foi  desenvolvido um aplicativo de gestão de viagens . O Partiu tem como principal objetivo realizar agendamento de tarefas a serem realizadas com  foco  na abordagem de turismo contendo mapas de geolocalização com rotas integradas a serem definidas pelo usuário podendo trazer maiores facilidades e garantia em um único local. O sistema também consiste em um módulo administrativo (dashboard) para realizar as manutenções e atualizações que se fizerem necessária de forma simples e rápida. 	
+					 </p>
+						<br>
+						    	
 			    </li>
 			  </ul>
 			</div>
