--- a/documentacao/documentoweb2015/index.html
+++ b/documentacao/documentoweb2015/index.html
@@ -37,7 +37,7 @@
 
 			<div class="panel panel-default">
 			  <!-- Default panel contents -->
-			  <div class="panel-heading"><h1>Documentação de Software do projeto [NOME DO PROJETO]</h1></div>
+			  <div class="panel-heading"><h1>Documentação de Software do projeto Partiu</h1></div>
 			  <div class="panel-body">
 			  	Os alunos do curso de Desenvolvimento de Software para Web deverão, ao final do curso, apresentar uma documentação do projeto de software, conforme o sumá́rio apresentado a seguir. Textos sobre cada item ou subitem devem ser escritos conforme cada especificação apresentada sobre o projeto.
 			  </div>
@@ -46,27 +46,29 @@
 			  <ul class="list-group">
 			    <li class="list-group-item">
 			    	<span><a href="01-introducao/index.html">01-introducao</a></span>
-					Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec pretium fermentum posuere. Morbi a diam a velit eleifend porta et non magna. Duis congue tortor id augue varius fermentum. Nam nec gravida dolor. In non euismod nunc, quis eleifend enim. Phasellus rutrum, tellus vitae volutpat faucibus, sapien ligula sodales metus, in aliquet leo massa commodo diam. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Pellentesque porttitor elementum massa. Donec enim orci, blandit vel tempor eu, volutpat nec eros. Curabitur tempus semper metus, sed semper enim sodales eu. Ut ut nulla ac magna elementum condimentum non sit amet urna. Sed enim ante, cursus id turpis quis, bibendum tincidunt augue. Nunc porttitor vestibulum vestibulum. Vivamus quis lorem eu sem fermentum rhoncus.			    	
+					Este documento representa a especificaão de requisitos para a consturação de um aplicativo para a plataforma mobile.
+                      Sua função é apoiar a gestão de viagens, hospedagens, deslocamentos, agendamentos e reservas de passeios, excursões, entre outros eventos turísticos ou de negócio com o intento de promover o turismo, divulgando e facilitando sua exploração.			    	
 			    </li>
 			    <li class="list-group-item">
 			    	<span><a href="02-resumo/index.html">02-resumo</a></span>
-					Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec pretium fermentum posuere. Morbi a diam a velit eleifend porta et non magna. Duis congue tortor id augue varius fermentum. Nam nec gravida dolor. In non euismod nunc, quis eleifend enim. Phasellus rutrum, tellus vitae volutpat faucibus, sapien ligula sodales metus, in aliquet leo massa commodo diam. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Pellentesque porttitor elementum massa. Donec enim orci, blandit vel tempor eu, volutpat nec eros. Curabitur tempus semper metus, sed semper enim sodales eu. Ut ut nulla ac magna elementum condimentum non sit amet urna. Sed enim ante, cursus id turpis quis, bibendum tincidunt augue. Nunc porttitor vestibulum vestibulum. Vivamus quis lorem eu sem fermentum rhoncus.
+					Em um breve resumo este documento visa exclarecer o problema que o software resolve  dentre a gestão de turismo assim como abordagem das funcionalidades que é oferecido ao usuário.
 			    </li>
 			    <li class="list-group-item">
 			    	<span><a href="03-descricao-detalhada/index.html">03-descricao-detalhada</a></span>
-					Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec pretium fermentum posuere. Morbi a diam a velit eleifend porta et non magna. Duis congue tortor id augue varius fermentum. Nam nec gravida dolor. In non euismod nunc, quis eleifend enim. Phasellus rutrum, tellus vitae volutpat faucibus, sapien ligula sodales metus, in aliquet leo massa commodo diam. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Pellentesque porttitor elementum massa. Donec enim orci, blandit vel tempor eu, volutpat nec eros. Curabitur tempus semper metus, sed semper enim sodales eu. Ut ut nulla ac magna elementum condimentum non sit amet urna. Sed enim ante, cursus id turpis quis, bibendum tincidunt augue. Nunc porttitor vestibulum vestibulum. Vivamus quis lorem eu sem fermentum rhoncus.
+			              Este Documento tem uma descrição detalhada do software e suas funcionalidades, recursos computacionais necessários para utilização, funcionalidades, plataformas utilizadas e compatíveis de execução do software.  	
+					
 			    </li>
 			    <li class="list-group-item">
 			    	<span><a href="04-tecnologias-utilizadas/index.html">04-tecnologias-utilizadas</a></span>
-					Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec pretium fermentum posuere. Morbi a diam a velit eleifend porta et non magna. Duis congue tortor id augue varius fermentum. Nam nec gravida dolor. In non euismod nunc, quis eleifend enim. Phasellus rutrum, tellus vitae volutpat faucibus, sapien ligula sodales metus, in aliquet leo massa commodo diam. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Pellentesque porttitor elementum massa. Donec enim orci, blandit vel tempor eu, volutpat nec eros. Curabitur tempus semper metus, sed semper enim sodales eu. Ut ut nulla ac magna elementum condimentum non sit amet urna. Sed enim ante, cursus id turpis quis, bibendum tincidunt augue. Nunc porttitor vestibulum vestibulum. Vivamus quis lorem eu sem fermentum rhoncus.			    	
+					O documento preve das tecnologias que foram utilizadas para desenvolvimento do software e uma descrição de cada uma delas.			    	
 			    </li>
 			    <li class="list-group-item">
 			    	<span><a href="05-doc-sistema/index.html">05-doc-sistema</a></span>
-					Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec pretium fermentum posuere. Morbi a diam a velit eleifend porta et non magna. Duis congue tortor id augue varius fermentum. Nam nec gravida dolor. In non euismod nunc, quis eleifend enim. Phasellus rutrum, tellus vitae volutpat faucibus, sapien ligula sodales metus, in aliquet leo massa commodo diam. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Pellentesque porttitor elementum massa. Donec enim orci, blandit vel tempor eu, volutpat nec eros. Curabitur tempus semper metus, sed semper enim sodales eu. Ut ut nulla ac magna elementum condimentum non sit amet urna. Sed enim ante, cursus id turpis quis, bibendum tincidunt augue. Nunc porttitor vestibulum vestibulum. Vivamus quis lorem eu sem fermentum rhoncus.
+					Este Documento tem uma descrição detalhada do software e suas funcionalidades, recursos computacionais necessários para utilização, funcionalidades, plataformas utilizadas e compatíveis de execução do software.
 			    </li>
 			    <li class="list-group-item">
 			    	<span><a href="06-tutorial/index.html">06-tutorial</a></span>
-					Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec pretium fermentum posuere. Morbi a diam a velit eleifend porta et non magna. Duis congue tortor id augue varius fermentum. Nam nec gravida dolor. In non euismod nunc, quis eleifend enim. Phasellus rutrum, tellus vitae volutpat faucibus, sapien ligula sodales metus, in aliquet leo massa commodo diam. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Pellentesque porttitor elementum massa. Donec enim orci, blandit vel tempor eu, volutpat nec eros. Curabitur tempus semper metus, sed semper enim sodales eu. Ut ut nulla ac magna elementum condimentum non sit amet urna. Sed enim ante, cursus id turpis quis, bibendum tincidunt augue. Nunc porttitor vestibulum vestibulum. Vivamus quis lorem eu sem fermentum rhoncus.
+					Neste capítulo temos o tutorial de uso do software, deixando explicito  o funcionamento de todas telas com suas respectivas funcionalidades, apresentando também as restrições existentes para acesso a cada interação, não deixando assim o usuário obter qualquer utilização indevida ou errada.
 			    </li>
 			  </ul>
 			</div>
