Revert "Atualização de Documentação"
This reverts commit 0c5722bf0a22fb335471a0f886d4028ed27193a1.

--- a/documentacao/documentoweb2015/documentoweb2015/02-resumo/index.html
+++ b/documentacao/documentoweb2015/documentoweb2015/02-resumo/index.html
@@ -39,18 +39,17 @@
 			  <!-- Default panel contents -->
 			  <div class="panel-heading"><h1>Documentação de Software do projeto Partiu</h1></div>
 			  <div class="panel-body">
-			  	<span><a href="#">01-introducao</a></span>
+			  	<span><a href="#">02-resumo</a></span>
 			  </div>
 
 			  <!-- List group -->
 			  <ul class="list-group">
-			    <li class="list-group-item">
-					 
-                      Este documento representa a especificaão de requisitos para a consturação de um aplicativo para a plataforma mobile.
-                      Sua função é apoiar a gestão de viagens, hospedagens, deslocamentos, agendamentos e reservas de passeios, excursões, entre outros eventos turísticos ou de negócio com o intento de promover o turismo, divulgando e facilitando sua exploração.
-					 					   
+				<li class="list-group-item">
+					Este documento visa exclarecer o problema que o software resolve  dentre a gestão de turismo assim como abordagem das funcionalidades do mesmo, com um breve resumo.	
 					<br>
-					<a href="ms-word:ofe|u|C:\Users\Edu\Desktop\Pós\documentoweb2015\documentoweb2015\01-introducao\Partiu.docx">Introdução do sistema</a>		    	
+					[INSERIR LINKS DOS DOCUMENTOS QUE VOCÊS INSERIRAM APÓS A EXPLICAÇÃO DO CAPÍTULO, por exemplo...]
+					<br>
+					<a href="#">Introdução do sistema</a>		    	
 			    </li>
 			  </ul>
 			</div>
