--- a/documentacao/documentoweb2015/documentoweb2015/01-introducao/index.html
+++ b/documentacao/documentoweb2015/documentoweb2015/01-introducao/index.html
@@ -47,8 +47,10 @@
 			    <li class="list-group-item">
 					 
                       Este documento representa a especificaão de requisitos para a consturação de um aplicativo para a plataforma mobile.
-                      Sua função é apoiar a gestão de viagens, hospedagens, deslocamentos, agendamentos e reservas de passeios, excursões, entre outros eventos turísticos ou de negócio com o intento de promover o turismo, divulgando e facilitando sua exploração.
+                      Sua função é apoiar a gestão de vianges, hospedagens, deslocamentos, agendamentos e reservas de passeios, excursões, entre outros eventos turísticos ou de negócio com o intento de promover o turismo, divulgando e facilitando sua exploração.
 					 					   
+					<br>
+					[INSERIR LINKS DOS DOCUMENTOS QUE VOCÊS INSERIRAM APÓS A EXPLICAÇÃO DO CAPÍTULO, por exemplo...]
 					<br>
 					<a href="ms-word:ofe|u|C:\Users\Edu\Desktop\Pós\documentoweb2015\documentoweb2015\01-introducao\Partiu.docx">Introdução do sistema</a>		    	
 			    </li>
