--- a/documentacao/documentoweb2015/documentoweb2015/06-tutorial/index.html
+++ b/documentacao/documentoweb2015/documentoweb2015/06-tutorial/index.html
@@ -37,23 +37,22 @@
 
 			<div class="panel panel-default">
 			  <!-- Default panel contents -->
-			  <div class="panel-heading"><h1>Documentação de Software do projeto Partiu</h1></div>
+			  <div class="panel-heading"><h1>Documentação de Software do projeto [NOME DO PROJETO]</h1></div>
 			  <div class="panel-body">
-			  	<span><a href="#">01-introducao</a></span>
+			  	<span><a href="#">06-tutorial</a></span>
 			  </div>
 
 			  <!-- List group -->
 			  <ul class="list-group">
-			    <li class="list-group-item">
-					 
-                      Este documento representa a especificaão de requisitos para a consturação de um aplicativo para a plataforma mobile.
-                      Sua função é apoiar a gestão de viagens, hospedagens, deslocamentos, agendamentos e reservas de passeios, excursões, entre outros eventos turísticos ou de negócio com o intento de promover o turismo, divulgando e facilitando sua exploração.
-					 					   
+				<li class="list-group-item">
+					Neste capítulo temos o tutorial de uso do software, deixando explicito  o funcionamento de todas telas com suas respectivas funcionalidades, apresentando também as restrições existentes para acesso a cada interação, não deixando assim o usuário obter qualquer utilização indevida ou errada. 	
 					<br>
-					<a href="ms-word:ofe|u|C:\Users\Edu\Desktop\Pós\documentoweb2015\documentoweb2015\01-introducao\Partiu.docx">Introdução do sistema</a>		    	
+					[INSERIR LINKS DOS DOCUMENTOS QUE VOCÊS INSERIRAM APÓS A EXPLICAÇÃO DO CAPÍTULO, por exemplo...]
+					<br>
+					<a href="#">Introdução do sistema</a>		    	
 			    </li>
 			  </ul>
-			</div>
+
 
 		</main>
 	</body>
