Refatoração de código, testes e validação do dashboard.

--- a/desenvolvimento/dashboard/src/index.html
+++ b/desenvolvimento/dashboard/src/index.html
@@ -26,7 +26,10 @@
   <style>
     .fill-remaining-space { flex: 1 1 auto; }
     .full-width { width: 100%; }
-    .active { background-color: #BDBDBD; }
+    .active { 
+      background-color: #BDBDBD; 
+      border-left: 4px solid #009688;
+    }
   </style>
 
 </head>
