--- a/desenvolvimento/hibrido/platforms/android/assets/www/index.html
+++ b/desenvolvimento/hibrido/platforms/android/assets/www/index.html
@@ -19,6 +19,26 @@
   <link rel="stylesheet" href="https://code.getmdl.io/1.2.0/material.indigo-pink.min.css">
   <script defer src="https://code.getmdl.io/1.2.0/material.min.js"></script>
 
+  <link rel="apple-touch-icon" href="/custom_icon.png">
+  <meta name="apple-mobile-web-app-capable" content="yes">
+
+  <!--manifest.json-->
+  <link rel="manifest" href="manifest.json">
+
+  <!--theme color-->
+  <meta name="theme-color" content="#3f51b5">
+  
+  <script>
+    if ('serviceWorker' in navigator) {
+      navigator.serviceWorker.register('sw.js').then((registration) => {
+          // Registration was successful
+          console.log('ServiceWorker registration successful with scope: ', registration.scope);
+      }).catch((err) => {
+          // registration failed :(
+          console.log('ServiceWorker registration failed: ', err);
+      });
+    }
+  </script>
 </head>
 
 <body>
@@ -28,6 +48,7 @@
       <div class="mdl-spinner mdl-js-spinner is-active" style="margin:45% 45% auto;"></div>
   </ion-app>
 
+  <script src="https://maps.googleapis.com/maps/api/js?libraries=places&key=AIzaSyD3CHT1Y8wufZ_o3Q6yxDKwe2mysMOtdg4&v=3"></script>
   <!-- cordova.js required for cordova apps -->
   <script src="cordova.js"></script>
   <!-- Polyfill needed for platforms without Promise and Collection support -->
@@ -41,7 +62,6 @@
   <!-- google maps script is loaded last as to not block rendering: AIzaSyD3CHT1Y8wufZ_o3Q6yxDKwe2mysMOtdg4 -->
   <!--<script src="http://maps.googleapis.com/maps/api/js?key=AIzaSyD3CHT1Y8wufZ_o3Q6yxDKwe2mysMOtdg4&v=3&libraries=places" async defer></script>-->
   <!--<script src="http://maps.googleapis.com/maps/api/js?sensor=false&key=AIzaSyD3CHT1Y8wufZ_o3Q6yxDKwe2mysMOtdg4&v=3" async defer></script>-->
-  <script src="https://maps.googleapis.com/maps/api/js?libraries=places&key=AIzaSyD3CHT1Y8wufZ_o3Q6yxDKwe2mysMOtdg4&v=3" async defer></script>
 </body>
 
 </html>
