Firebase 3 + AngularFire + TypeScript
Firebase 3 + AngularFire + TypeScript

--- a/documentacao/documentoweb2015/04-tecnologias-utilizadas/index.html
+++ b/documentacao/documentoweb2015/04-tecnologias-utilizadas/index.html
@@ -66,9 +66,9 @@
 					As seguintes tecnologias foram utilizadas:
 					<ol>
 						<li>Angular 2</li>
-						<li>Ionic 2</li>
+						<li>AngularFire 2</li>
 						<li>Firebase 3</li>
-						<li>Angular Firebase</li>
+						<li>Ionic 2</li>
 						<li>TypeScript</li>
 					</ol>
 					<br>					
@@ -105,18 +105,52 @@
 					 Para saber mais acesse: <a href="https://angular.io/docs/ts/latest/">Angular 2.</a>		    	
 			    </li>
 				<li class="list-group-item">
-					<h1> Ionic 2</h1>
+					<h1> AngularFire 2</h1>
 					<br>
-					Ionic framework é uma SDK (Software Development Kit) de código aberto que possibilita ao desenvolvedor de aplicações web que já possui conhecimento em HTML5, CSS e JavaScript a criar aplicações mobile.
+					AngularFire é uma biblioteca de código livre mantida pelo time da Firebase e sua comunidade de desenvolvedores.
 					<br>
-					Ionic foca principalmente na interação com a interface do aplicativo, ele visa simplificar o desenvolvimento do front-end. Basicamente ele preenche a lacuna do HTML5 para o desenvolvimento nativo do aplicativo.
-					<br>
-					Além do framework permitir que aplicações mobile sejam criadas praticamente do mesmo modo de uma aplicação web comum ainda permite que os testes sejam realizados diretamente pelo browser.
+					Ele provê uma associação tri-direcional, ou seja, ocorrendo uma alteração na view, ou no objeto de dados do Angular, ou no banco de dados de tempo real do Firebase reflete automaticamente nos demais.
 					<br>
 					<br>
-					Para saber mais acesse: <a href="http://ionicframework.com/docs/v2/getting-started/">Ionic 2.</a>		    	
+					Para saber mais acesse: <a href="https://angularfire2.com/">AngularFire 2.</a>		    	
+			    </li>
+				<li class="list-group-item">
+					<h1> Firebase 3</h1>
+					<br>
+					Firebase é uma plataforma móvel unificada BaaS (<i>Backend as a Service</i>) que fornece ao desenvolvedor diversos serviços baseado em nuvem.
+					Alguns dos serviços oferecido pelo Firebase são:
+					<ul>
+						<li><b>Análise: </b>Ferramenta que auxília a entender o comportamento do usuário, e estáticas de requisições ao aplicativo para auxíliar na tomada de decisões;</li>
+						<li><b>Armazenamento: </b> Possibilita guardar qualquer tipo de dados (Arquivos, fotos, vídeos...);</li>
+						<li><b>Autenticação: </b> Autenticação integrada com as principais redes sociais (Facebook, GitHub, ...);</li>
+						<li><b>Banco de dados em tempo real: </b> Significa que qualquer alteração realizada no banco é refletida em todas as aplicações conectadas.
+						O banco de daos é NoSQL e os dados são armazenados como objetos JSON;</li>
+						<li><b>Hospedagem: </b>Permite fazer o deploy da aplicação tornando-a acessível via web (HTTP/HTTPS), oferece ferramenta para controle de versão, escalonamento de máquinas para acompanhar o volume de requisições, etc..;</li>
+						<li><b>Notificações:</b>Permite o envio de notificações direcionadas aos usuários.</li>
+					</ul>
+					<br>
+					<br>
+					Para saber mais acesse: <a href="https://firebase.google.com/">Firebase 3.</a>		    	
+			    </li>
+				<li class="list-group-item">
+					<h1>TypeScript</h1>
+					<br>
+					TypeScript é uma linguagem de programação de código aberto criada e mantida pela Microsoft, é um "superconjunto" do JavaScript criada para desenvolvimento JavaScript em larga escala.
+					<br>
+					Essa linguagem permite ao desenvolvedor escrever código utilizando uma estrutura fortemente tipada, benefícios como:
+					<ul>
+						<li>Criação de Interfaces</li>
+						<li>Criação de Classes</li>
+						<li>Criação de módulos (facilita a exportação do código)</li>
+					</ul>
+					<br>
+					O código TypeScript é compilado em JavaScript puro. 
+					<br>
+					<br>
+					Para saber mais acesse: <a href="https://www.typescriptlang.org/">TypeScript.</a>		    	
 			    </li>
 			  </ul>
+
 
 		</main>
 	</body>
