--- a/documentacao/documentoweb2015/04-tecnologias-utilizadas/index.html
+++ b/documentacao/documentoweb2015/04-tecnologias-utilizadas/index.html
@@ -133,6 +133,18 @@
 					Para saber mais acesse: <a href="https://firebase.google.com/">Firebase 3.</a>		    	
 			    </li>
 				<li class="list-group-item">
+					<h1> Ionic 2</h1>
+					<br>
+					Ionic framework é uma SDK (Software Development Kit) de código aberto que possibilita ao desenvolvedor de aplicações web, que já possui conhecimento em HTML5, CSS e JavaScript, a criar aplicações mobile.
+					<br>
+					Ionic foca principalmente na interação com a interface do aplicativo, ele visa simplificar o desenvolvimento do front-end. Basicamente ele preenche a lacuna do HTML5 para o desenvolvimento nativo do aplicativo.
+					<br>
+					Além do framework permitir que aplicações mobile sejam criadas praticamente do mesmo modo de uma aplicação web comum ainda permite que os testes sejam realizados diretamente pelo browser.
+					<br>
+					<br>
+					Para saber mais acesse: <a href="http://ionicframework.com/docs/v2/getting-started/">Ionic 2.</a>		    	
+			    </li>
+				<li class="list-group-item">
 					<h1>TypeScript</h1>
 					<br>
 					TypeScript é uma linguagem de programação de código aberto criada e mantida pela Microsoft, é um "superconjunto" do JavaScript criada para desenvolvimento JavaScript em larga escala.
