Implementação de rota e refatoração do aplicativo.

--- a/desenvolvimento/hibrido/www/index.html
+++ b/desenvolvimento/hibrido/www/index.html
@@ -19,16 +19,16 @@
   <link rel="stylesheet" href="https://code.getmdl.io/1.2.0/material.indigo-pink.min.css">
   <script defer src="https://code.getmdl.io/1.2.0/material.min.js"></script>
 
-  <link rel="apple-touch-icon" href="/custom_icon.png">
-  <meta name="apple-mobile-web-app-capable" content="yes">
+  <!--<link rel="apple-touch-icon" href="/custom_icon.png">-->
+  <!--<meta name="apple-mobile-web-app-capable" content="yes">-->
 
   <!--manifest.json-->
-  <link rel="manifest" href="manifest.json">
+  <!--<link rel="manifest" href="manifest.json">-->
 
   <!--theme color-->
-  <meta name="theme-color" content="#3f51b5">
+  <!--<meta name="theme-color" content="#3f51b5">-->
   
-  <script>
+  <!--<script>
     if ('serviceWorker' in navigator) {
       navigator.serviceWorker.register('sw.js').then((registration) => {
           // Registration was successful
@@ -38,7 +38,7 @@
           console.log('ServiceWorker registration failed: ', err);
       });
     }
-  </script>
+  </script>-->
 </head>
 
 <body>
@@ -50,7 +50,7 @@
 
   <script src="https://maps.googleapis.com/maps/api/js?libraries=places&key=AIzaSyD3CHT1Y8wufZ_o3Q6yxDKwe2mysMOtdg4&v=3"></script>
   <!-- cordova.js required for cordova apps -->
-  <!--<script src="cordova.js"></script>-->
+  <script src="cordova.js"></script>
   <!-- Polyfill needed for platforms without Promise and Collection support -->
   <script src="build/js/es6-shim.min.js"></script>
   <!-- Zone.js and Reflect-metadata -->
