Correções da doc  conforme pedido pelo prof Rafael
Correções referente ao index geral e ao index da introdução.

--- a/documentacao/documentoweb2015/index.html
+++ b/documentacao/documentoweb2015/index.html
@@ -46,12 +46,12 @@
 			  <ul class="list-group">
 			    <li class="list-group-item">
 			    	<span><a href="01-introducao/index.html">01-introducao</a></span>
-					Este documento representa a especificaão de requisitos para a consturação de um aplicativo para a plataforma mobile.
+					Este documento representa a especificação de requisitos para a construção de um aplicativo para a plataforma mobile.
                       Sua função é apoiar a gestão de viagens, hospedagens, deslocamentos, agendamentos e reservas de passeios, excursões, entre outros eventos turísticos ou de negócio com o intento de promover o turismo, divulgando e facilitando sua exploração.			    	
 			    </li>
 			    <li class="list-group-item">
 			    	<span><a href="02-resumo/index.html">02-resumo</a></span>
-					Em um breve resumo este documento visa exclarecer o problema que o software resolve  dentre a gestão de turismo assim como abordagem das funcionalidades que é oferecido ao usuário.
+					Em um breve resumo este documento visa esclarecer o problema que o software resolve  dentre a gestão de turismo assim como abordagem das funcionalidades que é oferecido ao usuário.
 			    </li>
 			    <li class="list-group-item">
 			    	<span><a href="03-descricao-detalhada/index.html">03-descricao-detalhada</a></span>
