Continuação da Documentação
Descrição Detalhada

--- a/documentacao/documentoweb2015/05-doc-sistema/index.html
+++ b/documentacao/documentoweb2015/05-doc-sistema/index.html
@@ -54,7 +54,8 @@
 					<a href="#">Implementação</a>
 					<br>	
 					<a href="5.4-outros-docs\logotipos.rar">Logotipo</a>
-
+					<br>
+					<a href="5.4-outros-docs\sprints">Sprints</a>
 
                  
 
