--- a/documentacao/documentoweb2015/04-tecnologias-utilizadas/index.html
+++ b/documentacao/documentoweb2015/04-tecnologias-utilizadas/index.html
@@ -82,7 +82,7 @@
 				<li class="list-group-item">
 					<h1> Angular 2</h1>
 					<br>
-					Angular 2 é um framework mantido pelo Google e nos auxilia a abstrair a manipulação do DOM da lógica do aplicativo,a abstrair o acoplamento entre o lado cliente e o lado servidor da aplicação e a melhorar a qualidade dos testes.
+					Angular 2 é um framework mantido pelo Google que auxilia na abstração e manipulação do DOM da lógica do aplicativo, a abstrair o acoplamento entre o lado cliente e o lado servidor da aplicação e a melhorar a qualidade dos testes.
 					<br>
 					Angular é basicamente um conjunto de bibliotecas (algumas core, outras não) que trabalham em cooperação.
 					<br>
@@ -121,7 +121,7 @@
 				<li class="list-group-item">
 					<h1>Application Shell.</h1>
 					<br>
-					Uma aplicação shell é o ocnjunto de HTML, CSS e Javascript mínimos necessários para "carregar" a interface de uma aplicação web progressiva e um dos componentes que garantem uma boa performance da aplicação. A primeira vez que a aplicação carrega ela é imediatamente cacheada, isto é, o shell não precisa ser carregado toda vez, apenas o conteúdo necessário será carregado.
+					Uma aplicação shell é o conjunto de HTML, CSS e Javascript mínimos necessários para "carregar" a interface de uma aplicação web progressiva e um dos componentes que garantem uma boa performance da aplicação. A primeira vez que a aplicação carrega ela é imediatamente cacheada, isto é, o shell não precisa ser carregado toda vez, apenas o conteúdo necessário será carregado.
 					<br>
 					A arquitetura de uma aplicação shell separa a infraestrutura da aplicação principal da interface e dos dados. Toda a interface e a infraestrutura são cacheadas localmente utilizando-se um servivce worker para que posteriormente a aplicação seja carregada mais rápida.
 					<br>
@@ -161,11 +161,14 @@
 				<li class="list-group-item">
 					<h1>Progressive Web Application</h1>
 					<br>
-					São experiencias que combinam o melhor de aplicações web e o melhor de aplicações nativas. Eles são úteis para os usuários desde a primeira visita em uma aba do browser sem a necessidade de instalação. A medida que progressivamente o usuário constrói um relacionamento com o aplicativo ele se torna mais poderoso.
-					<br>
-					Esse tipo de aplicação carrega rápido, mesmo em redes instáveis, envia notificações relevantes, possui ícone na tela home e carrega em primeiro nível para experiencia de tela cheia.
-					<br>
-					<br>
+					Numa  combinação entre aplicações web e aplicações nativas obtêm-se as aplicações web progressivas, este tipo de aplicação possui um carregamento rápido mesmo em redes instáveis, contém também o envio de notificações relevantes. Inicialmente, o termo aplicações web progressivas (progessive web application)  foi utilizado como definição para os aplicativos web  que empregariam novas tecnologias. 
+					<br><br>	
+					Através de uma URL (Uniform Resource Locator) o usuário acessa o aplicativo, assim como  realiza o acesso a uma página comum da internet, isto é, um website.  Ao realizar repetidas visitas ao site e uma maior interação com o mesmo, o usuário recebe uma mensagem para instalação do aplicativo, tornando-o a partir de então, um aplicativo com características nativas em seu aparelho móvel. Tornando totalmente dispensável o acesso à lojas de aplicativos. Sob o ponto de vista dos desenvolvedores, mantém-se somente um código fonte, pois o conteúdo é interpretado pelos browsers de plataformas diversas.
+						<br><br>
+
+						<p style="text-align:center;"><img src="img/pwa.png"></p>
+
+						<br><br>
 					Para saber mais acesse: <a href="https://developers.google.com/web/fundamentals/getting-started/codelabs/your-first-pwapp/">Progressive Web Application.</a>		    	
 			    </li>
 				<li class="list-group-item">
