Atualizacao disposição de imagem

--- a/documentacao/documentoweb2015/04-tecnologias-utilizadas/index.html
+++ b/documentacao/documentoweb2015/04-tecnologias-utilizadas/index.html
@@ -161,16 +161,22 @@
 				<li class="list-group-item">
 					<h1>Progressive Web Application</h1>
 					<br>
+					<table>
+					<tr><td>
+						<p style="text-align:left;"><img src="img/pwa.png"  width="200" height="300"></p>
+					</td><td></td><td ALIGN="CENTER">
 					Numa  combinação entre aplicações web e aplicações nativas obtêm-se as aplicações web progressivas, este tipo de aplicação possui um carregamento rápido mesmo em redes instáveis, contém também o envio de notificações relevantes. Inicialmente, o termo aplicações web progressivas (progessive web application)  foi utilizado como definição para os aplicativos web  que empregariam novas tecnologias. 
 					<br><br>	
 					Através de uma URL (Uniform Resource Locator) o usuário acessa o aplicativo, assim como  realiza o acesso a uma página comum da internet, isto é, um website.  Ao realizar repetidas visitas ao site e uma maior interação com o mesmo, o usuário recebe uma mensagem para instalação do aplicativo, tornando-o a partir de então, um aplicativo com características nativas em seu aparelho móvel. Tornando totalmente dispensável o acesso à lojas de aplicativos. Sob o ponto de vista dos desenvolvedores, mantém-se somente um código fonte, pois o conteúdo é interpretado pelos browsers de plataformas diversas.
 						<br><br>
-
-						<p style="text-align:center;"><img src="img/pwa.png"></p>
-
+						</td>
+						
+					</tr><tr><td colspan="5">
 						<br><br>
 					Para saber mais acesse: <a href="https://developers.google.com/web/fundamentals/getting-started/codelabs/your-first-pwapp/">Progressive Web Application.</a>		    	
-			    </li>
+					</tr></td><td></td>
+					</table>
+			   </li>
 				<li class="list-group-item">
 					<h1>Service Workers</h1>
 					<br>
