alteração na descrição
alteração na descrição

--- a/documentacao/documentoweb2015/index.html
+++ b/documentacao/documentoweb2015/index.html
@@ -37,9 +37,9 @@
 
 			<div class="panel panel-default">
 			  <!-- Default panel contents -->
-			  <div class="panel-heading"><h1>Documentação de Software do projeto Partiu</h1></div>
+			  <div class="panel-heading"><h1>Documentação de Software do <b>Projeto Partiu!</b></h1></div>
 			  <div class="panel-body">
-			  	Os alunos do curso de Desenvolvimento de Software para Web deverão, ao final do curso, apresentar uma documentação do projeto de software, conforme o sumá́rio apresentado a seguir. Textos sobre cada item ou subitem devem ser escritos conforme cada especificação apresentada sobre o projeto.
+			  	O objetivo deste documento é dispor de forma organizada todos os diagramas, modelos, código fonte, tecnologias, requisitos, etc.. que foram utilizados para o desenvolvimento do software Partiu!
 			  </div>
 
 			  <!-- List group -->
@@ -63,7 +63,7 @@
 					O documento preve das tecnologias que foram utilizadas para desenvolvimento do software e uma descrição de cada uma delas.			    	
 			    </li>
 			    <li class="list-group-item">
-			    	<span><a href="05-doc-sistema/index.html">05-doc-sistema</a></span>
+			    	<span><a href="05-documentacao-sistema/index.html">05-documentacao do sistema</a></span>
 					Este Documento tem uma descrição detalhada do software e suas funcionalidades, recursos computacionais necessários para utilização, funcionalidades, plataformas utilizadas e compatíveis de execução do software.
 			    </li>
 			    <li class="list-group-item">
